devops/kubernetes/ingress/frontend-proxy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-proxy-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    # Proxy to Static Web App
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/upstream-vhost: "witty-bush-01ddf1503.2.azurestaticapps.net"
    nginx.ingress.kubernetes.io/proxy-ssl-server-name: "on"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - teachin.westeurope.cloudapp.azure.com
      secretName: teachin-tls
  rules:
  - host: teachin.westeurope.cloudapp.azure.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: static-web-app-proxy
            port:
              number: 443
---
apiVersion: v1
kind: Service
metadata:
  name: static-web-app-proxy
  namespace: default
spec:
  type: ExternalName
  externalName: witty-bush-01ddf1503.2.azurestaticapps.net
  ports:
  - port: 443
    protocol: TCP
