devops/kubernetes/ingress/langfuse-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: langfuse-ingress
  namespace: devops-tools
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - teachin.westeurope.cloudapp.azure.com
      secretName: teachin-tls
  rules:
  - host: teachin.westeurope.cloudapp.azure.com
    http:
      paths:
      - path: /langfuse(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: langfuse
            port:
              number: 3000
